Enabled mouse mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -288,6 +288,7 @@ bind-key -r K swap-pane -U
 # select pane via mouse
 ###############################################################################
 
+set -g mouse-mode on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
