Added mouse mode toggle and pane "zooming" toggle buttons

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
-# 
+#
 # tmux configuration settings
-# 
+#
 #
 # @author paolodedios
 #
@@ -14,7 +14,7 @@ set-option -g default-command "reattach-to-user-namespace -l bash"
 
 ###############################################################################
 # If you are using a 256 colour terminal, you will need to set the correct
-# term in tmux. 
+# term in tmux.
 ###############################################################################
 
 set -g default-terminal "screen-256color"
@@ -49,14 +49,14 @@ set -g base-index 1
 
 ###############################################################################
 # Set the title of the current window to something descriptive for the entire
-# tmux session. This results in the current window being called 
+# tmux session. This results in the current window being called
 #  "1. neon-vm:0.0.0 emacsclient justinlilly@neon-vm:~"
 ###############################################################################
 
 set-option -g set-titles on
 
 # window number,program name, active(or not)
-set-option -g set-titles-string '#H:#S.#I.#P #W #T' 
+set-option -g set-titles-string '#H:#S.#I.#P #W #T'
 
 ###############################################################################
 # Rebind the split window keys
@@ -80,7 +80,7 @@ bind-key C-a last-window
 
 ###############################################################################
 # By default, all windows in a session are constrained to the size of
-# the smallest client connected to that session, even if both clients  
+# the smallest client connected to that session, even if both clients
 # are looking at different windows. It seems that in this particular case,
 # Screen has the better default where a window is only  constrained in
 # size if a smaller client is actively looking at it. This behaviour can be
@@ -288,10 +288,43 @@ bind-key -r K swap-pane -U
 # select pane via mouse
 ###############################################################################
 
-set -g mouse-mode on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+# Toggle mouse on with C-x m
+bind m \
+  set -g mode-mouse on \;\
+  set -g mouse-resize-pane on \;\
+  set -g mouse-select-pane on \;\
+  set -g mouse-select-window on \;\
+  display 'Mouse: ON'
+
+# Toggle mouse off with C-x M
+bind M \
+  set -g mode-mouse off \;\
+  set -g mouse-resize-pane off \;\
+  set -g mouse-select-pane off \;\
+  set -g mouse-select-window off \;\
+  display 'Mouse: OFF'
+
+###############################################################################
+# Pane "zooming"
+#
+# These bindings (C-x + and C-x -) are a “zoom” feature. Focused on a given
+# pane, "C-x +" will promote the pane to be its own window. Then you can do
+# OS-native mark and copy all you want, no panes to worry about. When you’re
+# done, just use "C-x -" to turn the window back into a pane, right where it
+# was before.
+###############################################################################
+
+unbind +
+bind + \
+  new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \;\
+  swap-pane -s tmux-zoom.0 \;\
+  select-window -t tmux-zoom
+
+unbind -
+bind - \
+  last-window \;\
+  swap-pane -s tmux-zoom.0 \;\
+  kill-window -t tmux-zoom
 
 ###############################################################################
 # enable scrolling using the Shift-PageUp/Down keys:
