Removed old mouse mode setting

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -218,12 +218,6 @@ bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "tmux set-buffer - $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 
 ###############################################################################
-# enable mouse selection by holding the Option-key (aka Windows key)
-###############################################################################
-
-setw -g mode-mouse on
-
-###############################################################################
 # list all paste buffers (default key is '#')
 ###############################################################################
 
@@ -320,8 +314,8 @@ bind + \
   swap-pane -s tmux-zoom.0 \;\
   select-window -t tmux-zoom
 
-unbind -
-bind - \
+unbind _
+bind _ \
   last-window \;\
   swap-pane -s tmux-zoom.0 \;\
   kill-window -t tmux-zoom
@@ -335,5 +329,6 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 ###############################################################################
 # Bind 'S' to prompt for a host name for SSH
 ###############################################################################
+
 bind-key S command-prompt -p ssh: "new-window -n %1 'ssh %1'"
 
