--- a/.uncrustify/uncrustify-all.cfg
+++ b/.uncrustify/uncrustify-all.cfg
@@ -40,9 +40,9 @@
 #  	- indent_label = 1
 #  	- indent_access_spec = 1
 #  	- sp_before_comma = remove
-#  	- string_escape_char = 92  #   '\'
+#  	- string_escape_char = 92  (i.e '\')
 #
-# 	Refer to set_option_defaults()
+#  Refer to set_option_defaults()
 #
 #  Terminology:
 #  There are three types of parenthesis: sparen, fparen, paren.
