Removed mandatory space between assignment operator '='

--- a/.uncrustify/uncrustify-all.cfg
+++ b/.uncrustify/uncrustify-all.cfg
@@ -138,10 +138,10 @@ indent_align_assign                  = true
 
 sp_balance_nested_parens             = true
 sp_arith                             = add
-sp_assign                            = add
+sp_assign                            = ignore
 sp_assign_default                    = add
-sp_before_assign                     = add
-sp_after_assign                      = add
+sp_before_assign                     = ignore
+sp_after_assign                      = ignore
 sp_enum_assign                       = ignore
 sp_enum_before_assign                = add
 sp_enum_after_assign                 = add
