--- a/.uncrustify/uncrustify-autogen.cfg
+++ b/.uncrustify/uncrustify-autogen.cfg
@@ -162,10 +162,10 @@ newlines=auto
 utf8_bom=remove
 indent_with_tabs=0
 sp_arith=add
-sp_assign=add
+sp_assign=ignore
 sp_assign_default=add
-sp_before_assign=add
-sp_after_assign=add
+sp_before_assign=ignore
+sp_after_assign=ignore
 sp_enum_assign=ignore
 sp_enum_before_assign=add
 sp_enum_after_assign=add
