Added tmux session name to status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -104,7 +104,7 @@ set -g status-fg white
 set -g status-attr bright
 
 set -g status-right '#[fg=yellow]#(uptime | cut -d "," -f 2-)'
-set -g status-left  '#[fg=green]#H'
+set -g status-left  '#[fg=green]#H[#(tmux display-message -p "#S")] '
 
 
 ###############################################################################
