Updated with new tmux.conf syntax for copy mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -198,8 +198,8 @@ bind-key ] paste-buffer -s \015
 #   'y' will capture the highlighted string
 ###############################################################################
 
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send -X copy-selection
 
 ###############################################################################
 # rebind C-c and C-v to use reattach-to-user-namespace
