Updated mouse mode option for tmux 2.1+

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -283,7 +283,7 @@ bind-key -r K swap-pane -U
 
 # Toggle mouse on with C-x m
 bind m \
-  set -g mode-mouse on \;\
+  set -g mouse on \;\
   set -g mouse-resize-pane on \;\
   set -g mouse-select-pane on \;\
   set -g mouse-select-window on \;\
@@ -291,7 +291,7 @@ bind m \
 
 # Toggle mouse off with C-x M
 bind M \
-  set -g mode-mouse off \;\
+  set -g mouse off \;\
   set -g mouse-resize-pane off \;\
   set -g mouse-select-pane off \;\
   set -g mouse-select-window off \;\
