Updated reload conf file key binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -158,7 +158,7 @@ setw -g automatic-rename
 # reload configuration file
 ###############################################################################
 
-bind l source ~/.tmux.conf
+bind-key l source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 ###############################################################################
 # quit
