Fixed mouse mode configuration declaration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -282,20 +282,21 @@ bind-key -r K swap-pane -U
 ###############################################################################
 
 # Toggle mouse on with C-x m
-bind m \
-  set -g mouse on \;\
-  set -g mouse-resize-pane on \;\
-  set -g mouse-select-pane on \;\
-  set -g mouse-select-window on \;\
-  display 'Mouse: ON'
+bind m set -g mouse on \;  display-message 'Mouse: ON'
 
 # Toggle mouse off with C-x M
-bind M \
-  set -g mouse off \;\
-  set -g mouse-resize-pane off \;\
-  set -g mouse-select-pane off \;\
-  set -g mouse-select-window off \;\
-  display 'Mouse: OFF'
+bind M set -g mouse off \; display-message 'Mouse: OFF'
+
+# Start copy mode when scrolling up and exit when scrolling down to bottom.
+# The "#{mouse_any_flag}" check just sends scrolls to any program running that
+# has mouse support (like vim).
+#
+# @see https://github.com/tmux/tmux/issues/145
+# @see https://github.com/NHDaly/tmux-better-mouse-mode
+bind -n WheelUpPane if-shell -F -t = \
+     "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+
+bind -n WheelDownPane select-pane -t = \; send-keys -M
 
 ###############################################################################
 # Pane "zooming"
