--- a/.tmux.conf
+++ b/.tmux.conf
@@ -165,32 +165,32 @@ bind-key - split-window -v
 bind-key C-a last-window
 
 ###############################################################################
-# quit
+# Set quit shortcut
 ###############################################################################
 
 bind-key q confirm-before kill-server
 
 ###############################################################################
-# displays
+# List all tmux clients
 ###############################################################################
 
 bind-key * list-clients
 
 ###############################################################################
-# redisplay (default key in tmux is 'r')
+# Redisplay/refresh window (default key in tmux is 'r')
 ###############################################################################
 
 bind-key r refresh-client
 
 ###############################################################################
-# choose window/session
+# Choose window/session
 ###############################################################################
 
 bind-key "'" choose-window
 bind-key '"' choose-session
 
 ###############################################################################
-# navigate windows using 'h', 'l', and ctrl-h, ctrl-l (no prefix)
+# Navigate windows using 'h', 'l', and ctrl-h, ctrl-l (no prefix)
 ###############################################################################
 
 bind-key -r    h select-window -t :-
@@ -199,7 +199,7 @@ bind-key -nr C-h select-window -t :-
 bind-key -nr C-l select-window -t :+
 
 ###############################################################################
-# navigate panes using 'j', 'k', and ctrl-j, ctrl-k (no prefix)
+# Navigate panes using 'j', 'k', and ctrl-j, ctrl-k (no prefix)
 ###############################################################################
 
 bind-key -r    j select-pane -t :.-
@@ -214,18 +214,21 @@ bind-key -nr C-k select-pane -t :.+
 bind-key -r Tab select-pane -t :.+
 
 ###############################################################################
-# resize pane with arrow keys
-# -r: can be repeated without pressing prefix
+# Resize pane with Shift-[arrow keys]
+#
+# bind-key -r: can be repeated without pressing prefix
 #     again (500ms after last '-r' action or prefix)
+#
+# @see mouse mode resizing
 ###############################################################################
 
-# unbind-key Left  ; bind-key -r Left  resize-pane -L 2
-# unbind-key Right ; bind-key -r Right resize-pane -R 2
-# unbind-key Down  ; bind-key -r Down  resize-pane -D 2
-# unbind-key Up    ; bind-key -r Up    resize-pane -U 2
+bind-key -r S-Left  resize-pane -L 2
+bind-key -r S-Right resize-pane -R 2
+bind-key -r S-Down  resize-pane -D 2
+bind-key -r S-Up    resize-pane -U 2
 
 ###############################################################################
-# swap panes
+# Swap panes
 ###############################################################################
 
 unbind-key "C-o"
@@ -233,7 +236,7 @@ bind-key -r J swap-pane -D
 bind-key -r K swap-pane -U
 
 ###############################################################################
-# enable/disable mouse mode to select and resize panes
+# Enable/disable mouse mode to select and resize panes
 ###############################################################################
 
 # Toggle mouse on with C-x m
@@ -243,32 +246,32 @@ bind-key m set-option -g mouse on  \; display-message 'Mouse: ON'
 bind-key M set-option -g mouse off \; display-message 'Mouse: OFF'
 
 ###############################################################################
-# copy and paste within pane or window
+# Copy and paste contents of paste buffer within pane or window
 ###############################################################################
 
 bind-key [ copy-mode
 bind-key ] paste-buffer -s \015
 
 ###############################################################################
-# list all paste buffers (default key is '#')
+# List all paste buffers (default key is '#')
 ###############################################################################
 
 bind-key b list-buffers
 
 ###############################################################################
-# choose paste buffer to paste interactively (default key was '=')
+# Choose paste buffer to paste interactively (default key was '=')
 ###############################################################################
 
 bind-key p choose-buffer
 
 ###############################################################################
-# delete the most recently copied paste buffer of text (default key was '-')
+# Delete the most recently copied paste buffer of text (default key was '-')
 ###############################################################################
 
 bind-key x delete-buffer
 
 ###############################################################################
-# copy and paste using the vi key bindings. while in copy mode:
+# Copy and paste using the vi key bindings. while in copy-mode:
 #   'v' will activate highlighting
 #   'y' will capture the highlighted string
 #
@@ -280,14 +283,14 @@ bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi y send -X copy-selection
 
 ###############################################################################
-# rebind C-c and C-v to use reattach-to-user-namespace
+# Rebind C-c and C-v to use reattach-to-user-namespace.
 #
-# copy-n-paste workflow:
-#  1. Get into copy-mode C-x [
-#  2. To highlight text, hit 'v'
+# Copy-n-paste workflow:
+#  1. Enter copy-mode C-x [
+#  2. To highlight text, hit 'v' or [SPACE] key
 #  3. After you have moved and some text is highlighted you can copy
-#     into tmux buffer by hitting 'y'
-#  4. Copy tmux buffer into system clipboard C-x C-c
+#     into tmux paste-buffer by hitting 'y' or [ENTER] key
+#  4. Copy tmux paste-buffer into system clipboard C-x C-c
 #
 ###############################################################################
 
