Switched to copy-pipe-and-cancel feature in tmux 1.8 instead of manual copy and paste to paste buffer

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,16 +7,17 @@
 ###############################################################################
 
 ###############################################################################
-# Start tmux server, set global-options, window-options, and rebind keys
+# On Mac OS X, launch reattach-to-user-namespace to enable process launching
+# and have that process be attached to the per-user bootstrap namespace
+#
+# @see http://www.economyofeffort.com/
+#      2013/07/29/reattach-to-user-namespace-the-fix-for-your-tmux-in-os-x-woes/
+# #see https://superuser.com/
+#      questions/1114694/on-macos-sierra-beta-5-using-iterm-2-and-tmux-i-have-lost-the-ability-to-copy-p
 ###############################################################################
 
-start-server
-
-###############################################################################
-# On Mac OS X, launch reattach-to-user-namespace to enable copy-n-paste
-###############################################################################
-
-set-option -g default-command "reattach-to-user-namespace -l bash"
+set-option -g default-shell $SHELL
+set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 ###############################################################################
 # If you are using a 256 colour terminal, you will need to set the correct
@@ -24,6 +25,11 @@ set-option -g default-command "reattach-to-user-namespace -l bash"
 ###############################################################################
 
 set-option -g default-terminal "screen-256color"
+
+###############################################################################
+# Turn on xterm-keys so that additional function keys get escape sequences
+###############################################################################
+set-option -g xterm-keys on
 
 ###############################################################################
 # Set scroll back buffer to 10k lines
@@ -274,22 +280,7 @@ bind-key x delete-buffer
 ###############################################################################
 
 bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-selection
-
-###############################################################################
-# Rebind C-c and C-v to use reattach-to-user-namespace.
-#
-# Copy-n-paste workflow:
-#  1. Enter copy-mode C-x [
-#  2. To highlight text, hit 'v' or [SPACE] key
-#  3. After you have moved and some text is highlighted you can copy
-#     into tmux paste-buffer by hitting 'y' or [ENTER] key
-#  4. Copy tmux paste-buffer into system clipboard C-x C-c
-#
-###############################################################################
-
-bind-key C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind-key C-v run "tmux set-buffer  - $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 ###############################################################################
 # Mouse mode copy and paste shortcuts
@@ -306,8 +297,6 @@ bind-key -n WheelUpPane if-shell -F -t = \
      "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 
 bind-key -n WheelDownPane select-pane -t = \; send-keys -M
-
-
 
 ###############################################################################
 # Bind 'S' to prompt for a host name for SSH
