Fixed uptime status line for MacOS

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,7 +76,7 @@ set-option -g status-bg black
 set-option -g status-fg white
 set-option -g status-attr bright
 
-set-option -g status-right '#[fg=yellow]#(uptime | cut -d "," -f 2-)'
+set-option -g status-right '#[fg=yellow]#(uptime | cut -d " " -f 4-)'
 set-option -g status-left  '#[fg=green]#H[#S] '
 
 ###############################################################################
